--- a/app/views/friend_requests/index.html.erb
+++ b/app/views/friend_requests/index.html.erb
@@ -15,7 +15,7 @@
 
       <% @friend_requests.each do |friend_request| %>
       <tr>
-        <td><%= friend_request.user_id %></td>
+        <td><%= friend_request.user.email %></td>
         <td>
           <a href="/friend_requests/<%= friend_request.id %>" class="btn btn-primary">Show</a>
           <a href="/friend_requests/<%= friend_request.id %>/edit" class="btn btn-warning">Edit</a>
