--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -18,7 +18,7 @@
       <% @photos.each do |photo| %>
       <tr>
         <td><%= photo.caption %></td>
-        <td><%= photo.image_upload %></td>
+        <td><img src='<%= photo.image_upload %>' class='img-responsive'></td>
         <td><%= photo.user_id %></td>
         <td>
           <a href="/photos/<%= photo.id %>" class="btn btn-primary">Show</a>
