--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <form action="/create_photo" method="post">
+    <form action="/create_photo" method="post" enctype="multipart/form-data">
       <!-- Hidden input for authenticity token to protect from forgery -->
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
@@ -33,7 +33,7 @@
           Image upload
         </label>
 
-        <input type="text" id="image_upload" name="image_upload" placeholder="Image upload" class="form-control" value="<%= @photo.image_upload %>">
+        <input type="file" id="image_upload" name="image_upload" class="form-control">
       </div>
 
       <!-- Label and input for user_id -->
