--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -9,7 +9,7 @@
       <dd><%= @photo.caption %></dd>
 
       <dt>Image upload</dt>
-      <dd><%= @photo.image_upload %></dd>
+      <dd><img src="<%= @photo.image_upload %>" class="img-responsive"></dd>
 
       <dt>User</dt>
       <dd><%= @photo.user_id %></dd>
