--- a/app/views/friend_requests/index.html.erb
+++ b/app/views/friend_requests/index.html.erb
@@ -15,7 +15,13 @@
 
       <% @friend_requests.each do |friend_request| %>
       <tr>
-        <td><%= friend_request.user.email %></td>
+        <td>
+          <% if friend_request.user.present? %>
+            <a href="/users/<%= friend_request.user.id %>">
+              <%= friend_request.user.email %>
+            </a>
+          <% end %>
+        </td>
         <td>
           <a href="/friend_requests/<%= friend_request.id %>" class="btn btn-primary">Show</a>
           <a href="/friend_requests/<%= friend_request.id %>/edit" class="btn btn-warning">Edit</a>
