--- a/app/views/friend_requests/show.html.erb
+++ b/app/views/friend_requests/show.html.erb
@@ -6,7 +6,13 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @friend_request.user_id %></dd>
+      <dd>
+        <% if @friend_request.user.present? %>
+          <a href="/users/<%= @friend_request.user_id %>">
+            <%= @friend_request.user.email %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
